# spectrum-retreat-clone

./: .gitignore  CMakeLists.txt  README.md
DataStructures/Header/: Graph.hpp
DataStructures/Source/: Node.cpp
LibMath/Header/LibMath/: Angle.h  Interpolation.h
LibMath/Header/LibMath/Angle/: Degree.h
LibMath/Header/LibMath/Matrix/: Matrix2.h
LibMath/Header/LibMath/Vector/: Vector3.h  Vector4.h
LibMath/Source/: Arithmetic.cpp  Interpolation.cpp  Trigonometry.cpp  Vector.cpp
LibMath/Source/Matrix/: Matrix2.cpp  Matrix3.cpp
LowRenderer/: CMakeLists.txt
LowRenderer/Header/: ColorMacros.h  Light.h  LightVolume.h  Mesh.h
LowRenderer/Source/: Camera.cpp  Light.cpp
Physics/Header/PhysicsLib/: ColliderHierarchy.hpp  Frustum.h  Time.hpp
Physics/Source/: CollisionDetection.cpp  RayCast.cpp
Resources/Header/: Application.h  Model.h  ResourceManager.h  Textures.h  Timer.hpp  UI.hpp
Resources/Source/: Buffer.cpp  Model.cpp  ModelImporter.cpp  ResourceManager.cpp  Textures.cpp  UI.cpp
SpectrumAsylum/: CMakeLists.txt
SpectrumAsylum/Header/: DoorLogic.h  Game.h  Level.h  LevelOneLights.h  Scene.h
SpectrumAsylum/Source/: DoorLogic.cpp  Game.cpp  LevelOne.cpp  LevelOneLights.cpp  Menu.cpp  main.cpp
documents/: Links.txt  README.txt
source/: CMakeLists.txt
source/DataStructures/: CMakeLists.txt
source/DataStructures/Header/: Node.h
source/LibMath/: CMakeLists.txt
source/LibMath/Doc/: .editorconfig
source/LibMath/Header/LibMath/: Arithmetic.h  Intersection.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  Trigonometry.h  Vector.h
source/LibMath/Header/LibMath/Angle/: Radian.h
source/LibMath/Header/LibMath/Matrix/: Matrix3.h  Matrix4.h
source/LibMath/Header/LibMath/Vector/: Vector2.h
source/LibMath/Source/: Angle.cpp  Matrix4Vector4Operation.cpp  Vector.cpp
source/LibMath/Source/Matrix/: Matrix4.cpp
source/LowRenderer/Header/: Camera.h  SceneNode.hpp  UIComponents.hpp
source/LowRenderer/Source/: LightVolume.cpp  Mesh.cpp
source/Physics/: CMakeLists.txt
source/Physics/Header/PhysicsLib/: CollisionDetection.h  RayCast.h
source/Physics/Source/: ColliderHierarchy.cpp  Frustum.cpp
source/Resources/: CMakeLists.txt
source/Resources/Header/: Buffers.h  Model.h  ModelImporter.h  Shader.h  Vertex.h
source/Resources/Source/: Application.cpp  Model.cpp  Shader.cpp
source/SpectrumAsylum/: CMakeLists.txt
source/SpectrumAsylum/Header/: Color.hpp  ColorBlock.h  Game.h  LevelOne.h  Player.h
source/SpectrumAsylum/Source/: ColorBlock.cpp  Game.cpp  LevelOne.cpp  LevelOneLights.cpp  Menu.cpp  Player.cpp  Scene.cpp  main.cpp
