# DataStructures CMakeLists.txt

cmake_minimum_required(VERSION 3.25 FATAL_ERROR)

get_filename_component(TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

file(GLOB_RECURSE TARGET_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)
#list(FILTER TARGET_HEADER_FILES EXCLUDE REGEX ${CMAKE_CURRENT_BINARY_DIR})


file(GLOB_RECURSE TARGET_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)
#list(FILTER TARGET_SOURCE_FILES EXCLUDE REGEX ${CMAKE_CURRENT_BINARY_DIR})


source_group("Header" FILES ${TARGET_HEADER_FILES})
source_group("Source" FILES ${TARGET_SOURCE_FILES})

set(TARGET_FILES ${TARGET_HEADER_FILES} ${TARGET_SOURCE_FILES})

add_library(${TARGET_NAME} STATIC)


target_sources(${TARGET_NAME} PRIVATE ${TARGET_FILES})


target_include_directories(${TARGET_NAME}
	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Header
	PRIVATE ${LIBMATH_INCLUDE_DIR}
)

#target_link_libraries(${TARGET_NAME} PRIVATE ${DEPENDENCIES_LIBRARY})
target_link_libraries(${TARGET_NAME} PRIVATE ${LIBMATH_LIBRARY})
#target_link_libraries(${TARGET_NAME} PRIVATE ${LOWRENDERER_LIBRARY})
#target_link_libraries(${TARGET_NAME} PRIVATE ${RESOURCE_LIBRARY})


set(DATASTRUCTURES_LIBRARY ${TARGET_NAME} PARENT_SCOPE)

